--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -34,31 +34,10 @@
               </article>
               <% } %>
           </div>
-          <section class="pagination">
-            <% if (currentPage !==1 && previousPage !==1) { %>
-              <a href="?/page=1">1</a>
+          <%- include('../includes/pagination.ejs', {currentPage: currentPage, nextPage: nextPage, previousPage:
+            previousPage, lastPage: lastPage, hasNextPage: hasNextPage, hasPreviousPage: hasPreviousPage) %>
+            <% } else { %>
+              <h1>No Products Found!</h1>
               <% } %>
-                <a href="?/page=<%= currentPage %>" class="active">
-                  <%= currentPage %>
-                </a>
-                <% if (hasPreviousPage) {%>
-                  <a href="?/page=<%= previousPage %>">
-                    <%= previousPage %>
-                  </a>
-                  <% } %>
-                    <% if (hasNextPage) {%>
-                      <a href="?/page=<%= nextPage %>">
-                        <%= nextPage %>
-                      </a>
-                      <% } %>
-                        <% if (lastPage !==currentPage && nextPage !==lastPage) {%>
-                          <a href="?/page=<%= lastPage %>">
-                            <%= last %>
-                          </a>
-                          <% } %>
-          </section>
-          <% } else { %>
-            <h1>No Products Found!</h1>
-            <% } %>
       </main>
       <%- include('../includes/end.ejs') %>
